migration to spring boot (stage 1)